// Conversation Service Protobuf Definitions
// Provides gRPC service for conversation queries

syntax = "proto3";

package penfold.conversation.v1;

option go_package = "github.com/otherjamesbrown/penf-cli/api/proto/conversation/v1;conversationv1";

import "google/protobuf/timestamp.proto";

// =============================================================================
// Service Definition
// =============================================================================

// ConversationService provides gRPC endpoints for querying conversations.
service ConversationService {
  // List conversations with pagination
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);

  // Get a single conversation with items and participants
  rpc ShowConversation(ShowConversationRequest) returns (ShowConversationResponse);
}

// =============================================================================
// List Conversations Messages
// =============================================================================

// ListConversationsRequest requests a paginated list of conversations.
message ListConversationsRequest {
  string tenant_id = 1;
  int32 limit = 2;   // Max results
  int32 offset = 3;  // Pagination offset
}

// ListConversationsResponse returns matching conversations.
message ListConversationsResponse {
  repeated ConversationSummary conversations = 1;
  int64 total_count = 2;  // Total matching conversations (for pagination)
}

// ConversationSummary represents a conversation in the list view.
message ConversationSummary {
  string id = 1;
  string tenant_id = 2;
  string topic = 3;
  optional string thread_key = 4;
  google.protobuf.Timestamp first_seen = 5;
  google.protobuf.Timestamp last_seen = 6;
  int32 participant_count = 7;
  int32 item_count = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// =============================================================================
// Show Conversation Messages
// =============================================================================

// ShowConversationRequest requests a single conversation with details.
message ShowConversationRequest {
  string tenant_id = 1;
  string conversation_id = 2;
}

// ShowConversationResponse returns a conversation with items and participants.
message ShowConversationResponse {
  string id = 1;
  string tenant_id = 2;
  string topic = 3;
  optional string thread_key = 4;
  google.protobuf.Timestamp first_seen = 5;
  google.protobuf.Timestamp last_seen = 6;
  int32 participant_count = 7;
  int32 item_count = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  repeated ConversationItem items = 11;
  repeated ConversationParticipant participants = 12;
}

// ConversationItem represents a content item in a conversation.
message ConversationItem {
  string conversation_id = 1;
  string content_id = 2;
  optional int64 source_id = 3;
  google.protobuf.Timestamp added_at = 4;
}

// ConversationParticipant represents a participant in a conversation.
message ConversationParticipant {
  string conversation_id = 1;
  optional string name = 2;
  optional string address = 3;
}
